change back to home.html and change all instances of index.html

--- a/404.html
+++ b/404.html
@@ -90,7 +90,7 @@
                     
                     <!-- site-title : text-logo -->
                     <!--<h1 class="site-title">
-                        <a href="../index.html" rel="home">
+                        <a href="../home.html" rel="home">
                             Haley Dust
                         </a>
                     </h1>-->
@@ -394,7 +394,7 @@
                 
                     <!-- site-title : text-logo -->
                     <!--<h1 class="site-title">
-                        <a href="../index.html" rel="home">
+                        <a href="../home.html" rel="home">
                             Jeff Winger
                         </a>
                     </h1>-->
