--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                 <div class="layout-medium">
                     <!-- site-title : text-logo -->
                     <h1 class="site-title">
-                        <a href="../index.html" rel="home">
+                        <a href="../home.html" rel="home">
                             Lekan Sadiq
                         </a>
                     </h1>
@@ -60,7 +60,7 @@
                     <!-- nav-menu -->
                     <div class="nav-menu">
                         <ul>
-                            <li><a href="index.html">HOME</a>
+                            <li><a href="home.html">HOME</a>
                             </li>
                             <li><a href="about.html">ABOUT ME</a></li>
                             <li><a href="contact.html">CONTACT</a></li>
@@ -141,7 +141,7 @@
                                     <p>I am passionate about writing on tech, health and natural living, whilst my boundless capabilities also make me write comfortably on insurance, food and culture. I’m one you can count on when it comes to content crafting.
                                     </p>
 
-                                    <p>Come explore <a href="index.html#services"> my services </a> for contents that project your brand reputation, attract and ultimately retain clients.
+                                    <p>Come explore <a href="home.html#services"> my services </a> for contents that project your brand reputation, attract and ultimately retain clients.
                                     </p>
 
                                     <p>Let me know how I can be of help <a href="contact.html"> here </a> </p>
@@ -194,7 +194,7 @@
                     
                     <!-- site-title : text-logo -->
                     <h1 class="site-title">
-                        <a href="../index.html" rel="home">
+                        <a href="../home.html" rel="home">
                             Lekan Sadiq
                         </a>
                     </h1>
