--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
                 <div class="layout-medium">
                     <!-- site-title : text-logo -->
                     <h1 class="site-title">
-                        <a href="index.html" rel="home">
+                        <a href="home.html" rel="home">
                             Lekan Sadiq
                         </a>
                     </h1>
@@ -63,7 +63,7 @@
                     <!-- nav-menu -->
                     <div class="nav-menu">
                         <ul>
-                            <li><a href="index.html">HOME</a>
+                            <li><a href="home.html">HOME</a>
                             </li>
                             <li><a href="about.html">ABOUT ME</a></li>
                             <li><a href="contact.html">CONTACT</a></li>
@@ -253,7 +253,7 @@
                   
                     <!-- site-title : text-logo -->
                     <h1 class="site-title">
-                        <a href="../index.html" rel="home">
+                        <a href="../home.html" rel="home">
                             Lekan Sadiq
                         </a>
                     </h1>
